--- a/ChatbotCarambar.html
+++ b/ChatbotCarambar.html
@@ -9,16 +9,11 @@
     <title>ChatBot Carambar</title>
 </head>
 <body>
-     <div class="test">
-        <h1>ChatBot</h1>
-        <form id="form-api" autocomplete="off">
-            <input list="datalist" class="form-question" type="search" id="inputdialog" name="request">
-            <datalist id="datalist">
-            </datalist>
-        </form>
-        <div class="message" id="dialoganswer">
-            <div class="question"></div>
-            <div class="answer"></div>
+    <div class="container">
+        <div class="container">
+            <h1>API Carambar</h1>
+            <button id="jokeButton">Afficher une blague</button>
+            <div id="jokeContainer"></div>
         </div>
         <center><a class="btLink" href="index.html">Retour</a></center>
     </div>
