--- a/ChatbotCarambar.html
+++ b/ChatbotCarambar.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>API Carambar</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <script src="./assets/js/app.js" defer></script>
-    <title>ChatBot Carambar</title>
 </head>
 <body>
     <div class="container">
-        <div class="container">
-            <h1>API Carambar</h1>
-            <button id="jokeButton">Afficher une blague</button>
-            <div id="jokeContainer"></div>
-        </div>
-        <center><a class="btLink" href="index.html">Retour</a></center>
+        <h1>API Carambar</h1>
+        <button id="jokeButton">Afficher une blague</button>
+        <div id="jokeContainer"></div>
     </div>
+
+    <script src="script.js"></script>
+    <center><a class="btLink" href="index.html">Retour</a></center>
 </body>
 </html>
+        
+ 
