--- a/ChatbotCarambar.html
+++ b/ChatbotCarambar.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>API Carambar</h1>
-        <button id="jokeButton">Afficher une blague</button>
+        <h1>Chatbot Carambar</h1>
+        <button id="jokeButton">Afficher une blague !</button>
         <div id="jokeContainer"></div>
     </div>
 
