--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Accueil</title>
 </head>
 <body>
-    <form action="">
+    <form action="acceuil">
     <h1>Bienvenue sur mon ChatBot</h1>
     <p>Ceci est la page d'accueil. Veuillez cliquer sur commencez découvrir quelque blagues Carambar </p>
     <center><a class="btLink" href="chatbotCarambar.html">Commencez</a></center>
